tests/sumo/errors/too_many_teleports/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --max-num-teleports 5 --no-step-log -v
